--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -42,4 +42,54 @@
     
    }
 
+
 }
+
+.weather-image{
+    margin-top: 29px;
+    display: flex;
+    justify-content: center;
+   }
+   .weather-temp{
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 120px;
+    font-weight: 400;
+   }
+
+   .weather-location{
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-weight: 400;
+    font-size: 60px;
+
+   }
+
+
+
+   .data-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    color: white;
+   }
+   .element{
+    margin: auto;
+    display: flex;
+    gap: 12px;
+    align-items: flex-start;
+
+   }
+   .data{
+    font-size: 34px;
+    font-weight: 400;
+   }
+   .text{
+    font-size: 20px;
+    font-weight: 400;
+   }
+   .icon{
+    margin-top:10px ;
+   }
